# chat-server

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.dev.yaml  main.py  pyproject.toml
.github/workflows/: auto_tagging.yaml  develop.yaml  master.yaml
app/: chatting_room.py  main.py  router.py  socket_handler.py
app/chat/: chatting_room.py  const.py  errors.py  message.py  models.py  pubsub.py  repository.py  request.py  router.py  service.py  socket_handler.py
app/common/: authenticate.py  conf.py  container.py  database.py  errors.py  response.py
app/user/: errors.py  models.py  repository.py  request.py  response.py  router.py  service.py
assets/html/: test_for_chat.html
config/: config.yaml
docker/: Dockerfile.dev
docs/: api.md
k8s/: deployment.yaml  rollouts.yaml
requirements/: requirements.dev.txt  requirements.txt
tests/: test_socket.py
