[tool.poetry]
name = "chat-server"
version = "0.1.0"
description = ""
authors = ["jungmir <ham4051@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.81.0"
uvicorn = "^0.18.3"
pydantic = "^1.9.2"
hydra-core = "^1.2.0"
rich = "^12.5.1"
websockets = "^10.3"
SQLAlchemy = "^1.4.43"
psycopg2-binary = "^2.9.5"
dependency-injector = "^4.40.0"
aioredis = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest-sugar = "^0.9.5"
pytest-watch = "^4.2.0"
ipython = "^8.4.0"
requests = "^2.28.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
